<resources>
    <string name="app_name">Event Promoter</string>
    <string name="title_activity_maps">Map</string>
    <string name="browse_events">Browse Events</string>
    <string name="post_event">Post Event</string>
    <string name="go_to_map">Go to Map View</string>
    <string name="nameOfEvent">Name of Event</string>
    <string name="nameOfOrg">Name of Organization</string>
    <string name="location">Location</string>
    <string name="building">Building</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="timeHint">HH:MM</string>
    <string name="date">Date</string>
    <string name="dateEdit">MM/DD/YYYY</string>
    <string name="food">Food Provided</string>
    <string name="foodHint">Food Provided (Optional)</string>
    <string name="details">Extra Details</string>
    <string name="detailsHint">Extra Details (Optional)</string>
    <string name="sort_list">Sort by:</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_location">Location</string>
    <string name="event_page_question">Go to event page?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info">Info</string>
    <string name="app_description">This App is designed to connect student organizations and students around Campus.
        To do this, students and student organizations can post about upcoming events on Campus, by clicking on the Post Event Button.
        On that page, users will fill out the name of the event, what organization is sponsoring the event, the building and room it will be in, and the time and date.\n\n
        Students can browse what events have been posted, by going to either browse events, or view map. By clicking Browse Events, users will be presented with a list of events, displaying some basic information.
        By clicking on an item in the list, it will bring up a screen with all the information related to that event. \n\n
        Users can also click on the show map button to browse the events. The map view will have markers placed on all the buildings that have events going on.
        Users can click on a marker, which will bring up some basic information regarding the event. For more information users can click on the information that is shown on marker click.
    </string>
    <color name="lightYellow">#e6e6e6</color>
    <color name="blue">#0000ff</color>
    <color name="lightBlue">#80aaff</color>


    <string name="close">close</string>
    <string name="view_map">View Map</string>
    <string name="home">Home</string>
    <string name="sort_by_time_date">Time and Date</string>
    <string name="filter">Filter Events</string>


    <string-array name="buildings">
        <item>ADH - Almetris Duren Residence Hall</item>
        <item>AHG - Anna Hiss Gymnasium</item>
        <item>ANB - Arno Nowotny Building</item>
        <item>AND - Andrews Dormitory</item>
        <item>ARC - Animal Resources Center</item>
        <item>ART - Art Building and Museum</item>
        <item>ATT - AT\u0026T Executive Educ \u0026 Conf Center</item>
        <item>BAT - Batts Hall</item>
        <item>BEL - L. Theo Bellmont Hall</item>
        <item>BEN - Benedict Hall</item>
        <item>BGH - Biological Sciences Greenhouses</item>
        <item>BHD - Brackenridge Hall Dorm</item>
        <item>BIO - Biological Laboratories</item>
        <item>BLD - Blanton Dormitory</item>
        <item>BMA - Jack S. Blanton Museum of Art</item>
        <item>BMC - Belo Center for New Media</item>
        <item>BME - Biomedical Engineering Building</item>
        <item>BOT - Biological Greenhouse</item>
        <item>BRB - Bernard and Audre Rapoport Center</item>
        <item>BTL - Battle Hall</item>
        <item>BUR - Burdine Hall</item>
        <item>CAL - Calhoun Hall</item>
        <item>CBA - College of Business Administration</item>
        <item>CCJ - John B. Connally Center for Justice</item>
        <item>CEE - Continuing Engineering Education</item>
        <item>CLA - Liberal Arts Building</item>
        <item>CMA - Jesse H. Jones Comm. Ctr. (Bldg. A)</item>
        <item>CMB - Jesse H. Jones Comm. Ctr. (Bldg. B)</item>
        <item>COM - Computation Center</item>
        <item>CPE - Chemical and Petroleum Engineering</item>
        <item>CRB - Computational Resource Building</item>
        <item>CRD - Carothers Dormitory</item>
        <item>CRH - Creekside Residence Hall</item>
        <item>DCP - Denton A. Cooley Pavilion</item>
        <item>DFA - E. William Doty Fine Arts Building</item>
        <item>DFF - UFCU Disch-Falk Field</item>
        <item>EAS - Edgar A. Smith Building</item>
        <item>ECJ - Ernest Cockrell Jr. Hall</item>
        <item>EPS - E.P. Schoch Building</item>
        <item>ERC - Frank C Erwin Special Events Center</item>
        <item>ETC - Engineering Teaching Center II</item>
        <item>FAC - Peter T. Flawn Academic Center</item>
        <item>FDH - J. Frank Dobie House</item>
        <item>FNT - Larry R. Faulkner Nanosci. and Tech</item>
        <item>GAR - Garrison Hall</item>
        <item>GDC - Gates Dell Complex</item>
        <item>GEA - Mary E. Gearing Hall</item>
        <item>GEB - Dorothy L. Gebauer Building</item>
        <item>GOL - Goldsmith Hall</item>
        <item>GRE - Gregory Gymnasium</item>
        <item>GWB - Gordon-White Building</item>
        <item>HMA - Hogg Memorial Auditorium</item>
        <item>HRC - Harry Ransom Center</item>
        <item>IPF - Indoor Practice Facility</item>
        <item>JCD - Jester Dormitory</item>
        <item>JES - Beauford H. Jester Center</item>
        <item>JGB - Jackson Geological Sciences Bldg.</item>
        <item>JHH - John W. Hargis Hall</item>
        <item>KIN - Kinsolving Dormitory</item>
        <item>LBJ - Lyndon B Johnson Library</item>
        <item>LCD - Lavaca St. Child Development Center</item>
        <item>LCH - Littlefield Carriage House</item>
        <item>LFH - Littlefield Home</item>
        <item>LTD - Littlefield Dormitory</item>
        <item>LTH - Laboratory Theater Bldg.</item>
        <item>MAI - Main Building</item>
        <item>MBB - Moffett Molecular Biology Bldg.</item>
        <item>MEZ - Mezes Hall</item>
        <item>MHD - Moore-Hill Dormitory</item>
        <item>MMS - Mike A. Myers Track \u0026 Soccer Stadium</item>
        <item>MNC - Moncrief-Neuhaus Athletic Center</item>
        <item>MRH - Music Building \u0026 Recital Hall</item>
        <item>NEZ - North End Zone Building</item>
        <item>NHB - Norman Hackerman Building</item>
        <item>NMS - Neural and Molecular Science Bldg.</item>
        <item>NOA - North Office Building A</item>
        <item>NUR - Nursing School</item>
        <item>PAI - T.S. Painter Hall</item>
        <item>PAR - Parlin Hall</item>
        <item>PAT - J.T. Patterson Labs Bldg.</item>
        <item>PHD - Prather Hall Dormitory</item>
        <item>PHR - Pharmacy Building</item>
        <item>POB - Peter O\'Donnell Jr. Building</item>
        <item>RHD - Roberts Hall Dormitory</item>
        <item>RLM - Robert Lee Moore Hall</item>
        <item>RSC - Recreational Sports Center</item>
        <item>SAC - Student Activity Center</item>
        <item>SBS - Red and Charline McCombs Field</item>
        <item>SEA - Sarah M. \u0026 Charles E. Seay Building</item>
        <item>SER - Service Building</item>
        <item>SJH - San Jacinto Residence Hall</item>
        <item>SRH - Sid Richardson Hall</item>
        <item>SSB - Student Services Building</item>
        <item>SSW - School of Social Work Building</item>
        <item>STD - Darrell K Royal TX Memorial Stadium</item>
        <item>SUT - Sutton Hall</item>
        <item>SZB - George I. Sanchez Building</item>
        <item>TCC - Joe C Thompson Conference Center</item>
        <item>TCP - Texas Cowboys Pavilion</item>
        <item>TMM - Texas Memorial Museum</item>
        <item>TNH - Townes Hall</item>
        <item>TSC - Lee \u0026 Joe Jamail Texas Swimming Ctr</item>
        <item>UIL - Univ. Interscholastic League Bldg.</item>
        <item>UNB - Union Building</item>
        <item>UTC - University Teaching Center</item>
        <item>UTX - Etter-Harbin Alumni Center</item>
        <item>WAG - Waggener Hall</item>
        <item>WCH - Will C. Hogg Bldg.</item>
        <item>WEL - Robert A. Welch Hall</item>
        <item>WIN - F.L. Winship Drama Bldg.</item>
        <item>WRW - W.R. Woolrich Labs.</item>
        <item>WWH - Walter Webb Hall</item>
    </string-array>
</resources>
