<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eventpromoter="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_sort"
        android:title="@string/sort_list"
        eventpromoter:showAsAction="always">
        <!-- submenu -->
        <menu>
            <!-- group -->
            <group android:checkableBehavior="single">
                <item android:id="@+id/sort_by_name"
                    android:title="@string/sort_by_name"
                    android:checked="true" />
                <item android:id="@+id/sort_by_location"
                    android:title="@string/sort_by_location" />
                <item android:id="@+id/sort_by_date_time"
                    android:title="@string/sort_by_date_time" />
            </group>
        </menu>
    </item>
</menu>