<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightYellow">

        <TextView
            android:text="@string/nameOfEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/display_NameOfEvent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="50dp" />
        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_NameOfEvent"
            android:id="@+id/display_eventNameEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            />
        <TextView
            android:text="@string/nameOfOrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/display_nameOrg"
            android:layout_below="@+id/display_eventNameEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />
        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_nameOrg"
            android:id="@+id/display_nameOrgEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            />
        <TextView
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/display_location"
            android:layout_below="@+id/display_nameOrgEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <AutoCompleteTextView
            android:inputType="none"
            android:clickable="false"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_location"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:id="@+id/display_locationEdit"
            />

        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="130dp"
            android:layout_height="40sp"
            android:layout_alignBottom="@+id/display_locationEdit"
            android:layout_below="@+id/display_location"
            android:layout_toRightOf="@+id/display_locationEdit"
            android:id="@+id/display_roomEdit"
            android:maxLines="1"/>

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/display_time"
            android:layout_below="@+id/display_locationEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />
        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_time"
            android:id="@+id/display_timeEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:focusable="false"
            />
        <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/display_time"
            android:layout_alignLeft="@+id/display_dateEdit"
            android:gravity="left"
            android:id="@+id/display_date"
            android:layout_below="@+id/display_locationEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />
        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_time"
            android:layout_toRightOf="@+id/display_timeEdit"
            android:id="@+id/display_dateEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:focusable="false"
            />
        <TextView
            android:text="@string/food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/display_foodProvided"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_below="@+id/display_timeEdit"/>
        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_foodProvided"
            android:id="@+id/display_foodProvidedEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            />

        <TextView
            android:text="@string/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/display_extraDetails"
            android:layout_below="@+id/display_foodProvidedEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <EditText
            android:inputType="none"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_extraDetails"
            android:id="@+id/display_extraDetailsEdit"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            />




    </RelativeLayout>
</ScrollView>