<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@color/lightYellow"


    tools:context="john.eventpromoter.MainActivity">
<!--todo Low Priority: Fill up the screen more, instead of having small buttons -->


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:textSize="50sp"
        android:layout_above="@+id/postEvent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/blue" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:text="@string/post_event"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:id="@+id/post"
            android:onClick="eventSubmission"
            android:textSize="25sp"
            android:layout_below="@+id/textView2"
            android:backgroundTint="@color/lightBlue"
            android:layout_marginTop="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <Button
        android:text="@string/browse_events"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/search"
        android:onClick="browseEvents"
        android:layout_below="@+id/post"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/lightBlue" />



    <Button
        android:id="@+id/viewMap"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="viewMap"
        android:text="View Map"
        android:textSize="25sp"
        android:backgroundTint="@color/lightBlue"
        android:layout_below="@+id/search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>
